# NoteFlow

./: .gitignore  README.md
src/: package.json  server.js
src/backend/: server.js
src/db/: dbmanager.cpp  dbmanager.h
src/ui/: CMakeLists.txt  Message.h  channelitemwidget.cpp  channelitemwidget.h  chatview.cpp  chatview.h  connectdialog.cpp  connectdialog.h  explorer.cpp  explorer.h  fileEditor.cpp  fileEditor.h  fileitem.cpp  fileitem.h  fileitemwidget.cpp  fileitemwidget.h  homewindow.cpp  homewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  messagebubble.cpp  messagebubble.h  wsclient.cpp  wsclient.h
src/ui/CodeViewer/: CMakeLists.txt  codeviewer.cpp  codeviewer.h  codeviewer.ui  main.cpp  syntaxhighlighter.cpp  syntaxhighlighter.h
src/ui/ProjectLaunchProject/: channelitemwidget.h  mainwindow.h
